styles/profile-style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap'); /*Poppins*/
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap'); /*Roboto*/

* {
    /*border: solid 1px black;*/
    margin: 0;
    font-family: 'Poppins', sans-serif;
    /*font-family: 'Roboto', sans-serif;*/
    box-sizing: border-box;
    color: rgb(65, 65, 65);
}

body {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    background-color: white;
}

html {
    /*background-image: linear-gradient(blueviolet, blue);*/
    background-color: gray;
}

/* ------------------------ HEADER ---------------------------------*/ 

#banner {
    height: 14.4rem;
    background-color: rgb(24, 24, 44);
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 1.5rem;
}

img {     /*Ver si puedo agregar alguna sombra muuuy leve en esta imagen que se vea en la parte que sale del banner*/
    border: solid 3px white;
    border-radius: 7px;
    margin-left: 2.1rem;
    margin-top: 100px;
    height: 12rem;
    width: 12rem;
}

h1 {
    color: rgb(222, 222, 233);
    font-weight: 600;
    align-self: flex-end;
}

header {
    background-color: rgb(247, 247, 247);
    height: fit-content;
}

header div {
    display: flex;
    gap: 1.8rem;
    justify-content: space-between;
    padding: 0.9rem;
}

header div div div{ /* Estos son los datos de arriba a la derecha*/
    display: flex;
    flex-direction: column;
    gap: 0;
    height: 3rem;
    padding: 0;
    margin: 0;
    font-weight: 400;
}

header div div :nth-child(3) {
    margin-right: 1.2rem;
}

header div div div :first-child{
    font-weight: bolder;
}

.valoracion {
    color: green;
}

header button {
    background-color: rgb(247, 247, 247);
    border: solid 2px rgb(107, 107, 107);
    border-radius: 7px;
    height: 2.5rem;
    width: 12rem;
    align-self: center;
    color: rgb(107, 107, 107);
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 1rem;
    margin-left: 2.1rem;
    margin-top: 1.2rem;
}

header button:hover {
    background-color: rgb(107, 107, 107);
    color: white;
    cursor: pointer;
    transition: all .4s ease;
    -webkit-transition: all .4s ease;
}

/*---------------------------------- MAIN ---------------------------*/

main > div {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    column-gap: 1.8rem;
    row-gap: 1.8rem;
    padding-left: 3rem;
    padding-right: 3rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
}

#sobre-mi {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
}

main > div section p, main ul {
    background-color: rgb(247, 247, 247);
    border-radius: 7px;
    padding: 1rem;
    list-style: none;
}

#videos {
    display: grid;
    grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr);
    grid-template-rows: 1fr 1fr;
    height: 90%;
    min-width: fit-content;
    width: calc(100% - 100px);
    align-self: center;
    background-color: rgb(247, 247, 247);
    border-radius: 7px;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

#mi-musica {
    height: 27rem;
    display: flex;
    flex-direction: column;
}

#mi-musica h3 {
    padding-left: 3rem;
    padding-right: 3rem;
}

.video {
    display: flex;
    justify-content: center;
    align-items: center;
}

.video div {
    height: 80%;
    width: 80%;
    background-color: rgb(129, 129, 129);
    border-radius: 7px;
}

/*------------------------------------ FOOTER --------------------------------------*/

footer {
    padding-left: 3rem;
    padding-top: 1rem;
    background-color: rgb(24, 24, 44);
    height: 6rem;
}

footer h3 {
    color: rgb(222, 222, 233)
}

/*--------------------- MEDIA QUERY ------------------------------*/

@media (max-width: 480px) {
    body {
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    #banner {
        height: 10rem;
        background-color: rgb(24, 24, 44);
        gap: 1.5rem;
    }

    header :nth-child(2) {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 0.9rem;
        margin-top: 1rem;
    }

}

